# WaterNet_vectorize

./: .gitignore  ReadMe.md  license.txt  setup.cfg  setup.py
configuration_files/: path_configuration_template.yaml
scripts/: compute_lengths.py  make_all_intersecting_polygon.py  make_country_data.py  run_for_polygon_and_hydro2_basins.py
src/wwvec/: paths.py
src/wwvec/basin_vectorization/: basin_class.py  basin_data_class.py  connect.py  cut_bbox_raster.py  cycle_remover.py  local_stream_order.py  make_basin.py  thin_grid.pyx  vectorize.py  vectorize1.py  vectorizer.py
src/wwvec/polygon_vectorization/: _tools.py  clean_merged_data.py  make_all_intersecting_polygon.py
src/wwvec/raster_to_vector/: color_grid.pyx  components.pyx  thin_grid.pyx
